samples/_failures_safe/1761353677_7d96e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fb19788.c: In function ‘main’:
./samples/SAFE/__tmp_8fb19788.c:137:5: error: expected expression at end of input
  137 |     if (compressed_size == 0)
      |     ^~
./samples/SAFE/__tmp_8fb19788.c:137:5: error: expected declaration or statement at end of input
